# Ishango_Assessments

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  2022_ghana_assessment_results.csv  LICENSE  README.md  creds.json  crontab  docker-compose.yml  dockerfile  entrypoint.sh  problem1.py  problem3.sql  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: black.yml  codeql-analysis.yml  main.yml  publish.yml
docker_postgres_DB/: docker-compose.yml  docker_commands.txt
docs/: to_be_deleted
easier_version/: problem1.py  problem2.py  problem3.py
hard_version/: problem2.py
results_scrapping/: cookies.pkl  definitions.py  read_pickle.py  results.py  results_selenium.py  tools.py
results_scrapping/Tests/: test_login.py
src/scraping/: credentials.py  definitions.py  results.py  tools.py
tests/: test_tools.py
